mc/1.21.1: world load works end-to-end + render hook wired (Phases 2-6)
Game now boots, loads a world, opens an FP2 client session, and per-frame
calls AbstractFarRenderer.render() via NeoForge RenderLevelStageEvent.
Tile pipeline does not yet land tiles in the client RenderIndex so nothing
renders visibly — that is the next session's frontier.

Phase 2 (RocksDB): add rocksdbjni to fp2CompileDeps in mc/1.21.1/build.gradle.
:core declares it as implementationProvided but provided_ does not propagate
through runtimeElements; without this, AbstractWorldServer hits NoClassDefFound
on RocksDBException. Other implementationProvided deps (guava/fastutil/netty/
gson/asm) are coincidentally on Minecraft's runtime classpath; rocksdbjni is
the unique gap.

Phase 3 (player wiring): also call fp2_IFarPlayer_joinedWorld() from
FP2Server1_21.onPlayerLoggedIn. NeoForge fires EntityJoinLevelEvent before
PlayerLoggedInEvent in PlayerList.placeNewPlayer, so onEntityJoinLevel sees
no registered FP2 player on initial login and joinedWorld is never called.
Existing onEntityJoinLevel handler still covers dimension changes.

Phase 4 (renderer MVP): new LevelRenderer1_21 + TextureUVs1_21 +
TerrainRenderingBlockedTracker1_21 (no-op stub; renderingBlocked() always
returns false) + SingleBiomeBlockAccess1_21. Render-type lookup uses
ItemBlockRenderTypes.getChunkRenderType() with object identity against the
RenderType.solid()/cutout()/cutoutMipped()/translucent()/tripwire() singletons
— unknown types fall back to 0 (solid) instead of throwing. Tint via fake
BlockAndTintGetter that delegates getBlockTint() to colorResolver.getColor()
and throws UOE for the rest.

Phase 4b (DirectBufferHackery JPMS): rewrite static init to use
PUnsafe.objectFieldOffset(Field) + PUnsafe.getLong/putLong/putInt directly,
bypassing Field.setAccessible. setAccessible requires --add-opens which
NeoForge's MC-BOOTSTRAP module layer ignores; PUnsafe is privileged native
and works in any module layer. JDK 8 compatible (:c